[package]
name = "rpki-validator"
version = "0.1.0"
authors = ["Matias Fontanini <matias.fontanini@gmail.com>"]

[dependencies]
actix-web = "0.7.7"
bencher = "0.1.5"
bcder = "^0.1.0"
bytes = "^0.4"
chrono = "0.4.6"
ipnetwork = "0.13.1"
log = "^0.4"
num_cpus = "1.8.0"
prometheus = "0.4.2"
rpki = "^0.1.0"
serde_derive = "1.0.79"
serde_json = "1.0.32"
serde = "1.0.79"
simple_logger = "0.5.0"
toml = "0.4.8"
clap = "2.32.0"

[[bench]]
name = "storage"
harness = false
